force-app/main/default/objects/Asset/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Status)),
    "Draft",
    TEXT(Status)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>