force-app/main/default/objects/Asset/fields/Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Asset_Template__c</fullName>
    <label>Asset Template</label>
    <referenceTo>AssetTemplate__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>