force-app/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Type or category of the asset</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Network Equipment</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Power Supply</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>