force-app/main/default/objects/Asset/fields/Child_Assets_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Assets_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active child assets. Maintained by automated trigger.</description>
    <label>Child Assets Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>