force-app/main/default/objects/Asset/fields/Created_From_Template__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Template</label>
    <type>Checkbox</type>
</CustomField>