force-app/main/default/objects/Asset/fields/Days_Since_Last_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Maintenance__c</fullName>
    <description>Formula field calculating days since last maintenance</description>
    <formula>IF(ISBLANK(Last_Maintenance_Date__c), NULL, TODAY() - Last_Maintenance_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated number of days since the last maintenance date</inlineHelpText>
    <label>Days Since Last Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>