force-app/main/default/objects/Asset/fields/Days_Until_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Maintenance__c</fullName>
    <description>Number of days until next maintenance is due</description>
    <formula>IF(
  ISBLANK(Next_Maintenance_Due__c),
  NULL,
  Next_Maintenance_Due__c - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows days remaining until maintenance is due (negative if overdue)</inlineHelpText>
    <label>Days Until Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>