force-app/main/default/objects/Asset/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <description>General Ledger account code for ERP integration</description>
    <inlineHelpText>Enter the GL account code (40 characters max)</inlineHelpText>
    <label>GL Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>