force-app/main/default/objects/Asset/fields/Has_Child_Assets__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Assets__c</fullName>
    <description>Indicates if this asset has child assets in the hierarchy</description>
    <formula>Child_Assets_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Child Assets</label>
    <type>Checkbox</type>
</CustomField>