force-app/main/default/objects/Asset/fields/Hierarchy_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Indicator__c</fullName>
    <description>Visual indicator showing asset position in hierarchy</description>
    <formula>IF(
  Child_Assets_Count__c &gt; 0,
  &quot;📦 Parent (&quot; &amp; TEXT(Child_Assets_Count__c) &amp; &quot; children)&quot;,
  IF(
    NOT(ISBLANK(ParentId)),
    &quot;📄 Child of &quot; &amp; Parent.Name,
    &quot;🔷 Standalone&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Indicator</label>
    <type>Text</type>
</CustomField>