force-app/main/default/objects/Asset/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <description>Indicates the level of the asset in the hierarchy (0 = parent, 1 = child, 2 = grandchild, etc.)</description>
    <label>Hierarchy Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>