force-app/main/default/objects/Asset/fields/MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>MAC_Address__c</fullName>
    <description>MAC address of the asset</description>
    <inlineHelpText>Enter MAC address in format XX:XX:XX:XX:XX:XX</inlineHelpText>
    <label>MAC Address</label>
    <length>17</length>
    <type>Text</type>
</CustomField>