force-app/main/default/objects/Asset/fields/Maintenance_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Interval_Days__c</fullName>
    <description>Number of days between maintenance cycles</description>
    <inlineHelpText>Enter the number of days between scheduled maintenance</inlineHelpText>
    <label>Maintenance Interval (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>