force-app/main/default/objects/Asset/fields/Primary_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_System__c</fullName>
    <description>Primary system this asset belongs to</description>
    <inlineHelpText>Enter the primary system name</inlineHelpText>
    <label>Primary System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>