force-app/main/default/objects/Asset/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>Current software version</description>
    <inlineHelpText>Enter the current software version</inlineHelpText>
    <label>Software Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>