force-app/main/default/objects/Asset/fields/Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded By</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Superseded Assets</relationshipLabel>
    <relationshipName>Superseded_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>