force-app/main/default/objects/Asset/fields/Superseded_Date__c.field-meta.xml
<CustomField>
    <fullName>Superseded_Date__c</fullName>
    <label>Superseded Date</label>
    <type>Date</type>
</CustomField>