force-app/main/default/objects/Asset/fields/Template_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Template_Applied_Date__c</fullName>
    <label>Template Applied Date</label>
    <type>DateTime</type>
</CustomField>