force-app/main/default/objects/Asset/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Asset version number</description>
    <inlineHelpText>Enter the asset version (e.g., 1.0, 2.1)</inlineHelpText>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>