force-app/main/default/objects/Asset/fields/Version_Notes__c.field-meta.xml
<CustomField>
    <fullName>Version_Notes__c</fullName>
    <description>Notes about version changes and updates</description>
    <inlineHelpText>Enter notes about version changes, updates, or modifications</inlineHelpText>
    <label>Version Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>