force-app/main/default/objects/Asset/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Version number of the asset</description>
    <inlineHelpText>Enter the version number for this asset</inlineHelpText>
    <label>Version Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>