force-app/main/default/objects/Asset/fields/Warranty_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration__c</fullName>
    <description>Date when warranty expires</description>
    <inlineHelpText>Enter the warranty expiration date</inlineHelpText>
    <label>Warranty Expiration</label>
    <type>Date</type>
</CustomField>