force-app/main/default/objects/Asset/validationRules/Financial_Fields_Required_High_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Fields_Required_High_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Purchase_Cost__c &gt; 10000,
    OR(
        ISBLANK(GL_Account__c),
        ISBLANK(Cost_Center__c)
    )
)</errorConditionFormula>
    <errorMessage>GL Account and Cost Center are required for assets over $10,000</errorMessage>
</ValidationRule>