force-app/main/default/objects/Asset/validationRules/Install_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Install_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>InstallDate &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>InstallDate</errorDisplayField>
    <errorMessage>Installation date cannot be in the future</errorMessage>
</ValidationRule>