force-app/main/default/objects/Asset/validationRules/Maintenance_Interval_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Maintenance_Interval_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Asset_Category__c, &quot;Equipment&quot;),
  ISBLANK(Maintenance_Interval_Days__c)
)</errorConditionFormula>
    <errorDisplayField>Maintenance_Interval_Days__c</errorDisplayField>
    <errorMessage>Maintenance Interval is required for Equipment assets</errorMessage>
</ValidationRule>