force-app/main/default/objects/Asset/validationRules/Serial_Number_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(SerialNumber)),
  NOT(REGEX(SerialNumber, &quot;[A-Z0-9]{8,20}&quot;))
)</errorConditionFormula>
    <errorDisplayField>SerialNumber</errorDisplayField>
    <errorMessage>Serial number must be 8-20 alphanumeric characters</errorMessage>
</ValidationRule>